RESOLVED FIXED232826
Fix !ENABLE(ACCESSIBILITY) build following r285399
https://bugs.webkit.org/show_bug.cgi?id=232826
Summary Fix !ENABLE(ACCESSIBILITY) build following r285399
Ross Kirsling
Reported 2021-11-08 11:18:27 PST
Fix !ENABLE(ACCESSIBILITY) build following r285399
Attachments
Patch (2.26 KB, patch)
2021-11-08 11:20 PST, Ross Kirsling
no flags
[fast-cq] Patch (1.14 KB, patch)
2021-11-09 13:33 PST, Sihui Liu
no flags
Ross Kirsling
Comment 1 2021-11-08 11:20:06 PST
EWS
Comment 2 2021-11-08 13:12:43 PST
Committed r285427 (243983@main): <https://commits.webkit.org/243983@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 443577 [details].
Radar WebKit Bug Importer
Comment 3 2021-11-08 13:13:19 PST
Sihui Liu
Comment 4 2021-11-09 13:33:16 PST Comment hidden (obsolete)
Sihui Liu
Comment 5 2021-11-09 13:33:18 PST Comment hidden (obsolete)
Note You need to log in before you can comment on or make changes to this bug.