Fix !ENABLE(ACCESSIBILITY) build following r285399 https://bugs.webkit.org/show_bug.cgi?id=232826

Unreviewed build fix.


* accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::enableAccessibility):
(WebCore::AXObjectCache::disableAccessibility):
(WebCore::AXObjectCache::setEnhancedUserInterfaceAccessibility):



Canonical link: https://commits.webkit.org/243983@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285427 268f45cc-cd09-0410-ab3c-d52691b4dbfc